[workspace]
resolver = "2"
members = [
    "benches",
    "yarms-anvil",
    "yarms-chunk-loader",
    "yarms-datagen",
    "yarms-datagen-spec",
    "yarms-derive",
    "yarms-identifier",
    "yarms-nbt",
    "yarms-packet",
    "yarms-packet-io",
    "yarms-protocol" ,
    "yarms-std",
    "yarms-threadpool",
    "yarms-util-future",
    "yarms-wiki-scraper"
]

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes_without_reason = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
enum_glob_use = "allow"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
ref_patterns = "warn"
self_named_module_files = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_to_string = "warn"
string_add = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unseparated_literal_suffix = "warn"

[workspace.lints.rust]
missing_docs = "warn"
non_ascii_idents = "forbid"

[workspace.package]
edition = "2021"
