[package]
name = "yarms-anvil"
version = "0.1.0"
edition.workspace = true

[dependencies]
yarms-chunk-loader = { path = "../yarms-chunk-loader/", default-features = false }
yarms-std = { path = "../yarms-std", default-features = false, features = [ "buf-fill" ] }

bytes = { version = "1.10.0", default-features = false }

[lints]
workspace = true

[features]
default = [ "std" ]
std = [ "yarms-chunk-loader/std", "yarms-std/std" ]
