[package]
name = "yarms-anvil"
version = "0.1.0"
edition.workspace = true

[dependencies]
yarms-chunk-loader = { path = "../yarms-chunk-loader", default-features = false, features = [ "buf-fill" ] }
yarms-std = { path = "../yarms-std", default-features = false, features = [ "buf-fill" ] }

bytes = { version = "1.10.0", default-features = false }

[dev-dependencies]
flate2 = "1.1.5"
yarms-nbt = { path = "../yarms-nbt" }
yarms-util-future = { path = "../yarms-util-future" }

[lints]
workspace = true

[features]
default = [ "std" ]
alloc = []
std = [ "alloc", "yarms-chunk-loader/std", "yarms-std/std" ]
