[package]
name = "yarms-chunk-loader"
version = "0.1.0"
edition.workspace = true

[dependencies]
yarms-nbt = { path = "../yarms-nbt", default-features = false }
yarms-std = { path = "../yarms-std", default-features = false }

[lints]
workspace = true

[features]
default = [ "std" ]
std = [ "yarms-nbt/std", "yarms-std/std" ]
