[package]
name = "yarms-datagen-spec"
publish = false
version = "0.1.0"
edition.workspace = true

[dependencies]
yarms-identifier = { path = "../yarms-identifier", default-features = false, optional = true }

serde = { version = "1.0.219", default-features = false }
serde_derive = { version = "1.0.219", default-features = false }

[features]
default = [ "all" ]
all = [ "packet" ]
packet = [ "protocol" ]
protocol = [ "dep:yarms-identifier" ]

[lints]
workspace = true