[package]
name = "yarms-derive"
version = "0.1.0"
edition.workspace = true
description = "Procedural macros to generate necessary boilerplate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", default-features = false, features = [ "parsing", "proc-macro", "visit-mut" ] }
quote = { version = "1.0.40", default-features = false, features = [ "proc-macro" ] }

[lints]
workspace = true