[package]
name = "yarms-nbt"
version = "0.1.0"
edition.workspace = true

[dependencies]
memchr = { version = "2.7.4", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [ "alloc" ] }

[lints]
workspace = true

[features]
default = [ "std" ]
std = [ "memchr/std" ]