[package]
name = "yarms-nbt"
version = "0.1.0"
edition.workspace = true

[dependencies]
hashbrown = { version = "0.16.0", default-features = false, features = [ "alloc", "default-hasher", "inline-more" ] }
memchr = { version = "2.7.6", default-features = false }

[lints]
workspace = true

[features]
default = [ "std" ]
std = []

[dev-dependencies]
flate2 = "1.1.2"