[package]
name = "yarms-util-future"
version = "0.1.0"
edition.workspace = true
description = "Very simple, specialized utilities for working with futures."

[dependencies]
loom = { version = "0.7.2", optional = true }
rayon = { version = "1.10.0", default-features = false, optional = true }

[dev-dependencies]
loom = "0.7.2"

[features]
default = [ "std" ]
std = []

[lints]
workspace = true
